--- a/templates/base2.html
+++ b/templates/base2.html
@@ -14,8 +14,7 @@
 </head>
 
 <body>
-    <section class="hero is-primary is-fullheight" style="background: -webkit-linear-gradient(top left, rgba(0, 0, 0,1) 0%, rgba(10,10,10,1) 16%, rgba(50,50,50,1) 46%, rgba(80,80,80,1) 77%, rgba(110,110,110,1) 95%, rgba(150,150,150,1) 100%);">
-
+    <section class="hero is-primary is-fullheight" style="background: #381333;">
         <div class="hero-head">
             <nav class="navbar">
                 <div class="container">
@@ -41,11 +40,10 @@
                 </div>
             </nav>
         </div>
-
         <div class="hero-body">
             <div class="container has-text-centered">
-               {% block content %}
-               {% endblock %}
+                {% block content %}
+                {% endblock %}
             </div>
         </div>
     </section>
