--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,34 +2,54 @@ html, body {
   font-family: Avenir, sans-serif;
   font-size: 1rem;
   line-height: 1.5;
-  color: #D9992D;
+  color: #381333;
+  background: #171717;
   height: 100%;
 }
 
-html {
-  overflow-x: hidden
-}
-
-img {
-  max-width: 100%;
-  max-height: 100%;
-  height: auto;
-  width: auto;
-  object-fit: contain;
-  margin: auto;
+body {
+  height: fit-content;
 }
 
 header {
+  position: sticky;
+  top: 0;
   background-color: #381333;
-  background-size: cover;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.header-img {
+  height: 2rem;
+  padding-left: 1rem;
+}
+
+.header-lg {
+  background-color: #381333;
   padding-top: 5rem;
   padding-bottom: 5rem;
   text-align: center;
 }
 
-.content {
-  background-color: #FAF0E6;
-  height: 100%;
+.header-img-lg {
+  height: 5rem;
+}
+
+.navbar-container {
+  display: inline-block;
+  vertical-align: middle;
+  padding-left: 3rem;
+  padding-right: 3rem;
+}
+
+.navbar-button {
+  background-color: transparent;
+  font-size: 1rem;
+  color: #DEDEDE;
+}
+
+.centered {
+  text-align: center;
 }
 
 .split {
@@ -40,17 +60,71 @@ header {
 
 .split-left {
   left: 0;
+  background-color: #381333;
+  height: 100%;
 }
 
 .split-right {
   right: 0;
+  background-color: #171717;
+  height: 100%;
 }
 
-.search-box {
-  width: 50%
+.textbox-rounded {
+  width: 15rem;
+  height: 2.5rem;
+  border-radius: 1.25rem;
+  text-align: center;
 }
 
-.btn-primary, .btn-primary:hover, .btn-primary:active, .btn-primary:visited {
-  background-color: #381333 !important;
-  border-color: #381333 !important;
+#search-textbox {
+  width: 50%;
+  height: 4rem;
+  border-radius: 2rem;
+  border-width: 0;
+  text-align: center;
+  background-color: #2E2E2E;
+  color: #DEDEDE;
+}
+
+#search-button {
+  background-color: #381333;
+  border-width: 0;
+  width: 10rem;
+  height: 3rem;
+  border-radius: 1.5rem;
+}
+
+#login-icon {
+  width: 30%;
+  padding-bottom: 1rem;
+}
+
+#login-text {
+  width: 75%;
+}
+
+#login-tagline {
+  font-size: 2.5rem;
+  font-weight: 450;
+  padding-bottom: 3rem;
+  color: #D9992D;
+}
+
+#login-card {
+  background: #DEDEDE;
+  border-radius: 2rem;
+  margin: auto;
+  width: 20rem;
+  text-align: center;
+}
+
+#login-card-content {
+  padding: 1rem;
+  text-align: center;
+}
+
+.sso-button {
+  height: 1rem;
+  width: 1rem;
 }
