--- a/templates/base-headered.html
+++ b/templates/base-headered.html
@@ -3,14 +3,16 @@
 {% block content %}
 
 <header>
-    <a href="/main">
+    <a href="/main" style="text-decoration:none">
         <img src="/static/logo/main.svg" class="header-img" />
     </a>
     {% block header_aux %}
+
     {% endblock %}
 </header>
 
 {% block content_headered %}
+
 {% endblock %}
 
 {% endblock %}
