Added media cards in search results

--- a/templates/base-headered.html
+++ b/templates/base-headered.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <header>
-    <a href="/main" style="text-decoration:none">
+    <a href="/main" class="unstyled-link">
         <img src="/static/logo/main.svg" class="header-img" />
     </a>
     {% block header_aux %}
