--- a/static/css/style.css
+++ b/static/css/style.css
@@ -52,6 +52,10 @@ header {
   text-align: center;
 }
 
+.right-aligned {
+  text-align: right;
+}
+
 .split {
   width: 50%;
   position: fixed;
@@ -126,16 +130,50 @@ header {
 .media-card {
   background: #2E2E2E;
   margin: auto;
-  width: 75%;
-  text-align: center;
+  width: 50rem;
+  text-align: left;
   transition: transform 0.5s;
+  border-radius: 1rem;
 }
 
 .media-card:hover {
   transform: scale(1.1, 1.1)
 }
 
+.media-card-poster {
+  height: 15rem;
+  left: 0;
+  border-top-left-radius: 1rem;
+  border-bottom-left-radius: 1rem;
+  overflow: hidden;
+}
+
+.media-card-text-container {
+  display: inline;
+}
+
+.media-card-title {
+  color: #DEDEDE;
+  font-weight: 900;
+  font-size: 1.5rem;
+}
+
+.media-card-overview {
+  color: #DEDEDE;
+  /* font-weight: 900; */
+  font-size: 1rem;
+}
+
+.watch-later-button-container {
+  background-color: #D9992D;
+}
+
 .sso-button {
   height: 1rem;
   width: 1rem;
+}
+
+.unstyled-link {
+  color: inherit;
+  text-decoration: none;
 }
