--- a/templates/search-failure.html
+++ b/templates/search-failure.html
@@ -2,4 +2,8 @@
 
 {% block content_headered %}
 
+<div class="centered search-failure-box mt-5">
+    Sorry, we couldn't find the title you were looking for.
+</div>
+
 {% endblock %}
